--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 @import "tailwindcss";
 #root {
   max-width: 1280px;
-  margin: 0 auto;
   
   text-align: center;
+   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .logo {
