--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 @import "tailwindcss";
 #root {
   max-width: 1280px;
-  
+  justify-content: center;
   text-align: center;
-   margin: 0;
-  padding: 0;
   height: 100%;
   width: 100%;
+  align-items: center;
+  display: flex;
 }
 
 .logo {
